Bug 1100110 - Fix ScaleMode handling of ImageLayer and HwcComposer2D r=mattwoodrow